@@ -6,23 +6,20 @@ import org.springframework.transaction.annotation.Transactional;
 import ru.otus.hw.dto.BookDto;
 import ru.otus.hw.exceptions.EntityNotFoundException;
 import ru.otus.hw.mapper.BookMapper;
+import ru.otus.hw.models.Author;
 import ru.otus.hw.models.Book;
-import ru.otus.hw.repositories.AuthorRepository;
+import ru.otus.hw.models.Genre;
 import ru.otus.hw.repositories.BookRepository;
-import ru.otus.hw.repositories.GenreRepository;
 
-import java.util.HashSet;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 
 /**
  * Сервис обработки сведений о книгах.
  *
  * @author Irina Ilina
  */
-@RequiredArgsConstructor
 @Service
+@RequiredArgsConstructor
 public class BookServiceImpl implements BookService {
 
     /**
@@ -31,108 +28,61 @@ public class BookServiceImpl implements BookService {
     private final BookRepository bookRepository;
 
     /**
-     * Репозиторий обработки сведений об авторах.
-     */
-    private final AuthorRepository authorRepository;
-
-    /**
-     * Репозиторий обработки сведений о жанрах.
-     */
-    private final GenreRepository genreRepository;
-
-    /**
-     * Маппер сведений о книге.
+     * Маппер сведений об книге.
      */
     private final BookMapper bookMapper;
 
     /**
-     * Сервис преобразования сведений о модели в строковое представление.
+     * Сервис обработки сведений об авторах.
      */
-    private final ConvertService convertService;
+    private final AuthorService authorService;
 
-    @Transactional
-    @Override
-    public BookDto findById(long id) {
-        Optional<Book> book = bookRepository.findById(id);
-        return bookMapper.toDto(book.get());
-    }
+    /**
+     * Сервис обработки сведений о жанрах.
+     */
+    private final GenreService genreService;
 
-    @Transactional
-    @Override
-    public String getById(long id) {
-        BookDto bookDto = findById(id);
-        if (bookDto != null) {
-            return convertService.bookToString(bookDto);
-        }
-        return "Book with id %d not found".formatted(id);
-    }
-
-    @Transactional
     @Override
     public List<BookDto> findAll() {
-        return bookRepository.findAll().stream()
-                .map(bookMapper::toDto)
-                .collect(Collectors.toList());
+        List<Book> books = bookRepository.findAll();
+        return books.stream().map(bookMapper::toDto).toList();
     }
 
-    @Transactional
     @Override
-    public String getAll() {
-        return findAll().stream()
-                .map(convertService::bookToString)
-                .collect(Collectors.joining("," + System.lineSeparator()));
+    public BookDto findBookById(Long id) {
+        return bookMapper.toDto(bookRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Book with id %d not found".formatted(id))));
     }
 
-    @Transactional
     @Override
-    public String insertBook(String title, long authorId, List<Long> genresIds) {
-        var savedBook = insert(title, authorId, genresIds);
-        return convertService.bookToString(savedBook);
-    }
-
-    @Transactional
-    @Override
-    public BookDto insert(String title, long authorId, List<Long> genresIds) {
-        var author = authorRepository.findById(authorId).orElseThrow(
-                () -> new EntityNotFoundException("Author with id %d not found".
-                        formatted(authorId)
-                ));
-        var genres = genreRepository.findAllById(new HashSet<>(genresIds));
-        Book book = new Book();
-        book.setTitle(title);
-        book.setAuthor(author);
-        book.setGenres(genres);
-        return bookMapper.toDto(bookRepository.save(book));
-    }
-
-    @Transactional
-    @Override
-    public String updateBook(long id, String title, long authorId, List<Long> genresIds) {
-        var savedBook = update(id, title, authorId, genresIds);
-        return convertService.bookToString(savedBook);
-    }
-
-    @Transactional
-    @Override
-    public BookDto update(long id, String title, long authorId, List<Long> genresIds) {
-        Book book = bookRepository.findById(id)
+    public Book getBookById(Long id) {
+        return bookRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Book with id %d not found".formatted(id)));
-
-        var author = authorRepository.findById(authorId).orElseThrow(
-                () -> new EntityNotFoundException("Author with id %d not found".
-                        formatted(authorId)
-                ));
-        var genres = genreRepository.findAllById(new HashSet<>(genresIds));
-
-        book.setTitle(title);
-        book.setAuthor(author);
-        book.setGenres(genres);
-        return bookMapper.toDto(bookRepository.save(book));
     }
 
     @Transactional
     @Override
-    public void deleteById(long id) {
-        bookRepository.deleteById(id);
+    public void insert(String name, Long authorId, List<Long> genresIds) {
+        Author author = authorService.geAuthorById(authorId);
+        List<Genre> genres = genreService.findAllByIds(genresIds);
+        Book book = new Book(null, name, author, genres, null);
+        bookRepository.save(book);
+    }
+
+    @Transactional
+    @Override
+    public Book update(Long id, String name, Long authorId, List<Long> genresIds) {
+        Author author = authorService.geAuthorById(authorId);
+        List<Genre> genres = genreService.findAllByIds(genresIds);
+        Book book = new Book(id, name, author, genres, null);
+        bookRepository.save(book);
+        return book;
+    }
+
+    @Transactional
+    @Override
+    public void deleteBookById(Long id) {
+        Book book = bookRepository.findById(id).orElseThrow(RuntimeException::new);
+        bookRepository.delete(book);
     }
 }
